# nSTAT-python

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_GUIDE.md  AUDIT_REPORT.md  Analysis.m  CANONICAL_VALIDATION_ARTIFACTS.md  CIF.m  CITATION.cff  CLAUDE.md  CLEANROOM_POLICY.md  DISCREPANCIES.md  FitResSummary.m  FitResult.m  LICENSE  Makefile  PARITY.md  PARITY_SPEC.md  PORTING_MAP.md  PORTING_NOTES.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_READINESS.md  SignalObj.m  nstColl.m  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
baseline/: baseline_lock.yml  class_method_inventory.yml  example_workflow_inventory.yml  help_mapping.json  paper_section_mapping.yml  parity_manifest.yml
data/: README.md  datasets_manifest.json
docs/: ClassDefinitions.md  DocumentationSetup.md  Examples.md  NeuralSpikeAnalysis_top.md  PaperOverview.md  api.md  api.rst  conf.py  data_installation.rst  extras.rst  extras_gallery.html  extras_summary.html  galleries.html  index.md  index.rst  intro.html  local_matlab_parity.rst  notebook_figure_parity.rst  notebooks.md  notebooks_gallery.html  paper_examples.md  paper_examples_gallery.html  parity_runbook.rst  python-nstat.md  repo_split_status.rst
examples/: README.md  analysis_demo.py  basic_data_workflow.py  cif_demo.py  confidence_interval_demo.py  configcoll_demo.py  covariate_demo.py  covcoll_demo.py  decoding_demo.py  events_demo.py  fit_poisson_glm.py  fitressummary_demo.py  fitresult_demo.py  history_demo.py  nSTATPaperExamples.py  nspiketrain_demo.py  nstat_paper_examples.py  nstcoll_demo.py  signalobj_demo.py  simulate_population_psth.py  trial_demo.py  trialconfig_demo.py
helpfiles/: helptoc.xml
libraries/: fixPSlinestyle.m
matlab_port/: Analysis.py  CIF.py  ConfidenceInterval.py  ConfigColl.py  CovColl.py  Covariate.py  DecodingAlgorithms.py  Events.py  FitResSummary.py  FitResult.py  History.py  PointProcessSimulationThinning_mdl_r2011a.py  PointProcessSimulation_mdl_r2010b.py  PointProcessSimulation_mdl_r2011a.py  PointProcessSimulation_mdl_r2011b.py  PointProcessSimulation_mdl_r2013a.py  SignalObj.py  TRANSLATION_MAP.json  Trial.py  TrialConfig.py  nSTAT_Install.py  nspikeTrain.py  nstColl.py
notebooks/: 00_getting_started.ipynb  AnalysisExamples.ipynb  AnalysisExamples2.ipynb  ClassDefinitions.ipynb  ConfidenceIntervalOverview.ipynb  ConfigCollExamples.ipynb  CovCollExamples.ipynb  CovariateExamples.ipynb  DecodingExample.ipynb  DecodingExampleWithHist.ipynb  DocumentationSetup2025b.ipynb  EventsExamples.ipynb  Examples.ipynb  ExplicitStimulusWhiskerData.ipynb  FitResSummaryExamples.ipynb  FitResult.ipynb  FitResultExamples.ipynb  FitResultReference.ipynb  HawkesWaveAnalysis.ipynb  HippocampalPlaceCellExample.ipynb  HistoryExamples.ipynb  HybridFilterExample.ipynb  MultitypeCrossK.ipynb  NetworkTutorial.ipynb  NeuralSpikeAnalysis_top.ipynb  PPSimExample.ipynb  PPThinning.ipynb  PSTHEstimation.ipynb  PlaceFieldGLMBasis.ipynb  PointProcessSimulation.slxc  RealPlaceCellDecoding.ipynb  SignalObjExamples.ipynb  SpatialClusterAndGibbs.ipynb  StimulusDecode2D.ipynb  TrialConfigExamples.ipynb  TrialExamples.ipynb  ValidationDataSet.ipynb  mEPSCAnalysis.ipynb  nSTATPaperExamples.ipynb  nSpikeTrainExamples.ipynb  (+3 more)
nstat/: ConfidenceInterval.py  ConfigColl.py  CovColl.py  Covariate.py  DecodingAlgorithms.py  FitResSummary.py  FitResult.py  SignalObj.py  TrialConfig.py  __init__.py  _compat.py  _gallery_common.py  _spike_train_impl.py  _trial_config_impl.py  analysis.py  cif.py  class_fidelity.py  confidence_interval.py  core.py  data_manager.py  datasets.py  decoding.py  decoding_algorithms.py  errors.py  events.py  extras_gallery.py  fit.py  glm.py  history.py  install.py  linear_cif.py  matlab_engine.py  matlab_reference.py  notebook_data.py  notebook_fidelity_audit.py  notebook_figures.py  notebook_parity.py  nspikeTrain.py  nstColl.py  nstat_install.py  (+15 more)
parity/: CYCLE_VALIDATION_CHECKLIST.md  PORTING_PLAN_CHECKLIST.md  README.md  TIER1_PORT_BACKLOG.md  class_contracts.yml  class_equivalence_inventory.json  class_equivalence_report.json  class_fidelity.yml  class_fixture_export_spec.yml  code_structure_exemptions.yml  decoding_algorithms_excluded_methods.md  example_mapping.yaml  example_output_spec.yml  function_contracts.yml  function_example_alignment_report.json  functional_gate_policy.yml  help_source_manifest.yml  help_source_parsing_report.json  helpfile_figure_manifest.json  helpfile_notebook_manifest.yml  integration_opportunities.md  line_by_line_review.md  line_by_line_review_report.json  line_equivalence_policy.yml  line_equivalence_report.csv  line_equivalence_report.json  line_review_sprint.md  manifest.yml  matlab_api_inventory.json  matlab_audit_xref.md  matlab_defects.md  matlab_defects.yml  matlab_delta_report.json  matlab_diff_2026-05-21.md  matlab_gold_snapshot_20260302.yml  matlab_pedagogical_gaps.md  matlab_pedagogical_gaps.yml  matlab_reference.yml  matlab_source_sha.txt  method_closure_sprint.md  (+28 more)
reports/: examples_notebook_verification.json  implemented_method_coverage.json  matlab_smoke_input.json  matlab_smoke_runner.m  method_parity_matrix.json  mfile_parity_report.json  offline_standalone_verification.json  offline_standalone_verification_no_matlab_path.json  port_baseline_snapshot.json  python_vs_matlab_similarity_baseline.json  python_vs_matlab_similarity_report.json
tests/: __init__.py  conftest.py  parity_utils.py  test_analysis_fit_decode.py  test_analysis_matlab_parity.py  test_analysis_pipeline.py  test_api_surface.py  test_audit_bug_fixes.py  test_behavior_contracts.py  test_ci_extras_functional.py  test_cif_matlab_parity.py  test_cif_tier2.py  test_class_contracts.py  test_class_equivalence_artifacts.py  test_class_fidelity_audit.py  test_class_parity_manifest.py  test_cleanroom_boundary.py  test_compare_notebook_figures.py  test_compat_behavior_contracts.py  test_confidence.py  test_confidence_matlab_parity.py  test_configcoll_matlab_parity.py  test_covariate_matlab_parity.py  test_covcoll_matlab_parity.py  test_curriculum_parity.py  test_docs.py  (+120 more)
(+941 files in other folders)
