[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nstat-toolbox"
version = "0.3.1"
description = "Python port of the nSTAT toolbox"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cajigas Lab" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "sympy>=1.13",
  "PyYAML>=6.0",
  "nbformat>=5.10",
  "nbclient>=0.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "scikit-image>=0.22",
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "myst-parser>=4.0",
  "packaging>=23.0",  # version-string parsing in tests/test_version_sync.py
]

# --- nstat.extras opt-in dependency groups ----------------------------
# Each group corresponds to a module under ``nstat/extras/``.  When the
# concrete extras module lands, callers can opt in via
# ``pip install nstat-toolbox[<group>]``.
#
# Empty lists below are intentional placeholders — the architecture
# (core + extras + opt-in deps) is declared here even before each
# extras module ships, so contributors have a documented home for new
# integrations from day one.  Fill in version pins as modules land.

# Bridge to SpikeInterface for spike-sorting outputs.
spikeinterface = []

# Bridge to Neo (de-facto neurophysiology data standard).
neo = []

# Bridge to Neurodata Without Borders.
nwb = []

# Bridge to pynapple (Flatiron Institute neural-data analysis).
pynapple = []

# Bridge to NeMoS (Flatiron Institute Poisson-GLM / basis families).
# Per parity/integration_opportunities.md, NeMoS is the strongest
# cross-validation target for the GLM fitting path.
nemos = []

# Bridge to Dynamax / probml state-space models (for the unported
# KF_EM / PP_EM / mPPCO_EM families).
dynamax = []

# PyTorch-based decoders (NDT / POYO bridge; deferred to v0.4+).
deep-learning = []

# Convenience: install every extras group at once.
all-extras = []

[tool.setuptools.packages.find]
where = ["."]
include = ["nstat*"]

[tool.setuptools.package-data]
"nstat.data" = ["manifest.json"]

[project.scripts]
nstat-paper-examples = "nstat.paper_examples:main"
nstat-install = "nstat.install:main"
