[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nstat-toolbox"
version = "0.4.2"
description = "Python port of the nSTAT toolbox"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cajigas Lab" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "sympy>=1.13",
  "PyYAML>=6.0",
  "nbformat>=5.10",
  "nbclient>=0.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "scikit-image>=0.22",
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "myst-parser>=4.0",
  "packaging>=23.0",  # version-string parsing in tests/test_version_sync.py
]

# --- nstat.extras opt-in dependency groups ----------------------------
# Each group backs a module under ``nstat/extras/`` and is documented in
# parity/integration_opportunities.md.  Install via
# ``pip install nstat-toolbox[<group>]``.

# Bridge to SpikeInterface for spike-sorting outputs (placeholder; module
# not yet shipped).
spikeinterface = []

# Bridge to Neo — backs nstat.extras.interop.neo.  BSD-3.
neo = [
  "neo>=0.13",
  "quantities>=0.15",
]

# Bridge to Neurodata Without Borders — backs nstat.extras.interop.nwb.
# pynwb pulls in hdmf transitively.  BSD-3.
nwb = [
  "pynwb>=2.8",
]

# Bridge to pynapple — backs nstat.extras.interop.pynapple.  MIT.
pynapple = [
  "pynapple>=0.7",
]

# Spike-train distance metrics — backs nstat.extras.metrics.spike_distances.
# BSD-2; C/Cython accelerated.
metrics = [
  "pyspike>=0.8",
]

# Bridge to NeMoS for Poisson-GLM cross-validation —
# backs nstat.extras.validation.nemos_bridge.  MIT; pulls JAX (~200 MB).
nemos = [
  "nemos>=0.2",
]

# Bridge to Dynamax / probml state-space models for the unported
# KF_EM / PP_EM / mPPCO_EM families.  Pulls JAX (~200 MB).
# Deliberately NOT in [all-extras] yet — gating on the CI extras-
# functional run validating Dynamax compatibility first.
dynamax = [
  "dynamax>=0.1",
]

# Cross-validation harness for parity tests — bundles the references
# called out in parity/integration_opportunities.md Tier-1.
test-parity = [
  "nemos>=0.2",
  "pykalman>=0.11",
  "statsmodels>=0.15",
  "nitime>=0.12",
]

# Bridge to replay_trajectory_classification (Denovellis 2021, eLife;
# MIT) for clusterless marked point-process decoding + trajectory-type
# classification — backs nstat.extras.decoding.clusterless_bridge.
# JAX-heavy (~200 MB).  Like [dynamax], deliberately NOT in [all-extras];
# install explicitly when you need it.
clusterless = [
  "replay_trajectory_classification>=1.4",
]

# PyTorch-based decoders (NDT / POYO bridge; deferred to v0.4+).
deep-learning = []

# Convenience: install every functional extras group at once.
# This MUST be the union of all individually-installable groups above
# (otherwise the README claim that ``[all-extras]`` is the one-shot
# install would be a lie).
all-extras = [
  "neo>=0.13",
  "quantities>=0.15",
  "pynwb>=2.8",
  "pynapple>=0.7",
  "pyspike>=0.8",
  "nemos>=0.2",
  "pykalman>=0.11",
  "statsmodels>=0.15",
  "nitime>=0.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nstat*"]

[tool.setuptools.package-data]
"nstat.data" = ["manifest.json"]

[project.scripts]
nstat-paper-examples = "nstat.paper_examples:main"
nstat-install = "nstat.install:main"
