[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nstat-toolbox"
version = "0.5.5"
description = "Python port of the nSTAT toolbox"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cajigas Lab" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "sympy>=1.13",
  "PyYAML>=6.0",
  "nbformat>=5.10",
  "nbclient>=0.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "scikit-image>=0.22",
  "sphinx>=8.0",
  "sphinx-rtd-theme>=3.0",
  "myst-parser>=4.0",
  "packaging>=23.0",  # version-string parsing in tests/test_version_sync.py
]

# --- nstat.extras opt-in dependency groups ----------------------------
# Each group backs a module under ``nstat/extras/`` and is documented in
# parity/integration_opportunities.md.  Install via
# ``pip install nstat-toolbox[<group>]``.

# Bridge to SpikeInterface for spike-sorting outputs (placeholder; module
# not yet shipped).
spikeinterface = []

# Bridge to Neo — backs nstat.extras.interop.neo.  BSD-3.
neo = [
  "neo>=0.13",
  "quantities>=0.15",
]

# Bridge to Neurodata Without Borders — backs nstat.extras.interop.nwb.
# pynwb pulls in hdmf transitively.  BSD-3.
nwb = [
  "pynwb>=2.8",
]

# Bridge to pynapple — backs nstat.extras.interop.pynapple.  MIT.
pynapple = [
  "pynapple>=0.7",
]

# Spike-train distance metrics — backs nstat.extras.metrics.spike_distances.
# BSD-2; C/Cython accelerated.
metrics = [
  "pyspike>=0.8",
]

# Bridge to NeMoS for Poisson-GLM cross-validation —
# backs nstat.extras.validation.nemos_bridge.  MIT; pulls JAX (~200 MB).
nemos = [
  "nemos>=0.2",
]

# Bridge to Dynamax / probml state-space models — backs the
# nstat.extras.em.dynamax_bridge KF_EM / PP_EM / mPPCO_EM family.
# Pulls JAX (~200 MB).  Deliberately NOT in [all-extras] due to that
# install size (like [clusterless]); install explicitly when needed.
dynamax = [
  "dynamax>=0.1",
]

# Cross-validation harness for parity tests — bundles the references
# called out in parity/integration_opportunities.md Tier-1.
test-parity = [
  "nemos>=0.2",
  "pykalman>=0.11",
  "statsmodels>=0.14",
  "nitime>=0.12",
]

# Bridge to replay_trajectory_classification (Denovellis 2021, eLife;
# MIT) for clusterless marked point-process decoding + trajectory-type
# classification — backs nstat.extras.decoding.clusterless_bridge.
# JAX-heavy (~200 MB).  Like [dynamax], deliberately NOT in [all-extras];
# install explicitly when you need it.
clusterless = [
  "replay_trajectory_classification>=1.4",
]

# Spatial / spatiotemporal point-process module (nstat.extras.spatial).
# The CORE (lgcp, spatial_gof, marked_gof) needs only the already-present
# numpy/scipy — NO extra to install for it.  These groups back only the
# OPTIONAL heavier bridges; like [dynamax]/[clusterless] they are
# deliberately NOT rolled into [all-extras].
#   - spatial-gp: heavier GP path for lgcp_fit(backend="gpflow"); pulls
#     gpflow + TensorFlow (heavy).
spatial-gp = [
  "gpflow>=2.9",
]
#   - hawkes: multivariate Hawkes via tick (Bacry et al. 2018, JMLR; BSD-3),
#     backs nstat.extras.spatial.hawkes_bridge.
hawkes = [
  "tick>=0.7",
]
#   - dpp: DPP sampling via DPPy (MIT), backs nstat.extras.spatial.dpp_bridge.
#     The inline NumPy eigen-sampler fallback needs NO dependency.
dpp = [
  "dppy>=0.3",
]

# Latent-dynamics bridges (nstat.extras.latents).  Backs the Elephant
# GPFA wrapper (Yu et al. 2009).  ~50 MB combined footprint; deliberately
# NOT in [all-extras] (defer adoption-driven inclusion to a future PR).
latents = [
  "elephant>=1.2",
  "neo>=0.13",
  "quantities>=0.15",
]

# Numba JIT acceleration for the PPAF / Kalman hot loops in
# nstat.decoding_algorithms.  Backs nstat.extras._numba_kernels.  When
# installed, ``DecodingAlgorithms.PPDecodeFilterLinear`` and
# ``DecodingAlgorithms.kalman_filter`` transparently route their
# time-invariant fast paths through ``@numba.njit(cache=True,
# fastmath=False)`` kernels.  Pure-Python (NumPy) paths remain the
# default when this extras key is not installed.  BSD-2.
numba = [
  "numba>=0.60",
]

# PyTorch-based decoder bridges (placeholder; deferred to a future release).
deep-learning = []

# Convenience: install every functional extras group at once.
# This MUST be the union of all individually-installable groups above
# (otherwise the README claim that ``[all-extras]`` is the one-shot
# install would be a lie).
all-extras = [
  "neo>=0.13",
  "quantities>=0.15",
  "pynwb>=2.8",
  "pynapple>=0.7",
  "pyspike>=0.8",
  "nemos>=0.2",
  "pykalman>=0.11",
  "statsmodels>=0.14",
  "nitime>=0.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nstat*"]

[tool.setuptools.package-data]
"nstat.data" = ["manifest.json"]

[project.scripts]
nstat-paper-examples = "nstat.paper_examples:main"
nstat-install = "nstat.install:main"
